Fix .ipynb, add Result.html

--- a/GIS_PathFinding.ipynb
+++ b/GIS_PathFinding.ipynb
@@ -1221,7 +1221,92 @@
    "execution_count": null,
    "id": "b93a96cc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[W] DEM grid: (259, 229) dx,dy= 90.0 90.0\n",
+      "[W] DEM bounds_m: (14169367.2908, 14192774.2894, 4337875.3787, 4358528.6128)\n",
+      "[W] DEM CRS: EPSG:3857\n",
+      "[W] Rasterize transform(from_origin): | 90.00, 0.00, 14169367.29|\n",
+      "| 0.00,-90.00, 4358528.61|\n",
+      "| 0.00, 0.00, 1.00|\n",
+      "[W] SHP read: C:\\Users\\inho9\\Desktop\\dev\\GISProject\\DATA\\Extracted_Deajeon.shp rows= 292904\n",
+      "[W] SHP CRS: EPSG:3857\n",
+      "[W] Unique codes in SHP: ['111', '112', '121', '131', '141', '153', '154', '155', '161', '162', '163', '212', '222', '231', '241', '251', '252', '311', '321', '331'] ...\n",
+      "[W] Codes without mapping: 0\n",
+      "[W][111] features= 68182 weight= 100.0 buffer_m= 0.0\n",
+      "    -> rasterized cells: 9423, arr(min,max)=(100,100)\n",
+      "[W][112] features= 23101 weight= 100.0 buffer_m= 0.0\n",
+      "    -> rasterized cells: 10211, arr(min,max)=(100,100)\n",
+      "[W][121] features= 5225 weight= 80.0 buffer_m= 0.0\n",
+      "    -> rasterized cells: 1460, arr(min,max)=(80,80)\n",
+      "[W][131] features= 79222 weight= 80.0 buffer_m= 0.0\n",
+      "    -> rasterized cells: 19194, arr(min,max)=(80,80)\n",
+      "[W][141] features= 3269 weight= 30.0 buffer_m= 0.0\n",
+      "    -> rasterized cells: 3640, arr(min,max)=(30,30)\n",
+      "[W][153] features= 39 weight= 500.0 buffer_m= 0.0\n",
+      "    -> rasterized cells: 972, arr(min,max)=(500,500)\n",
+      "[W][154] features= 9714 weight= 0.3 buffer_m= 6.0\n",
+      "    -> rasterized cells: 35556, arr(min,max)=(0.3,0.3)\n",
+      "[W][155] features= 10 weight= 0.6 buffer_m= 0.0\n",
+      "    -> rasterized cells: 25, arr(min,max)=(0.6,0.6)\n",
+      "[W][161] features= 608 weight= 1.0 buffer_m= 0.0\n",
+      "    -> rasterized cells: 347, arr(min,max)=(1,1)\n",
+      "[W][162] features= 8795 weight= 2.0 buffer_m= 0.0\n",
+      "    -> rasterized cells: 4338, arr(min,max)=(2,2)\n",
+      "[W][163] features= 8448 weight= 2.0 buffer_m= 0.0\n",
+      "    -> rasterized cells: 6347, arr(min,max)=(2,2)\n",
+      "[W][212] features= 2082 weight= 2.0 buffer_m= 0.0\n",
+      "    -> rasterized cells: 2891, arr(min,max)=(2,2)\n",
+      "[W][222] features= 23755 weight= 2.0 buffer_m= 0.0\n",
+      "    -> rasterized cells: 15681, arr(min,max)=(2,2)\n",
+      "[W][231] features= 3305 weight= 3.0 buffer_m= 0.0\n",
+      "    -> rasterized cells: 3649, arr(min,max)=(3,3)\n",
+      "[W][241] features= 2052 weight= 3.0 buffer_m= 0.0\n",
+      "    -> rasterized cells: 2810, arr(min,max)=(3,3)\n",
+      "[W][251] features= 605 weight= 4.0 buffer_m= 0.0\n",
+      "    -> rasterized cells: 400, arr(min,max)=(4,4)\n",
+      "[W][252] features= 1074 weight= 5.0 buffer_m= 0.0\n",
+      "    -> rasterized cells: 1223, arr(min,max)=(5,5)\n",
+      "[W][311] features= 2918 weight= 8.0 buffer_m= 0.0\n",
+      "    -> rasterized cells: 21529, arr(min,max)=(8,8)\n",
+      "[W][321] features= 2600 weight= 10.0 buffer_m= 0.0\n",
+      "    -> rasterized cells: 17958, arr(min,max)=(10,10)\n",
+      "[W][331] features= 1764 weight= 9.0 buffer_m= 0.0\n",
+      "    -> rasterized cells: 10399, arr(min,max)=(9,9)\n",
+      "[W][411] features= 51 weight= 6.0 buffer_m= 0.0\n",
+      "    -> rasterized cells: 95, arr(min,max)=(6,6)\n",
+      "[W][421] features= 80 weight= 2.0 buffer_m= 0.0\n",
+      "    -> rasterized cells: 287, arr(min,max)=(2,2)\n",
+      "[W][422] features= 4670 weight= 4.0 buffer_m= 0.0\n",
+      "    -> rasterized cells: 6340, arr(min,max)=(4,4)\n",
+      "[W][423] features= 31758 weight= 5.0 buffer_m= 0.0\n",
+      "    -> rasterized cells: 33450, arr(min,max)=(5,5)\n",
+      "[W][511] features= 1249 weight= 1000000.0 buffer_m= 0.0\n",
+      "    -> rasterized cells: 3738, arr(min,max)=(1e+06,1e+06)\n",
+      "[W][612] features= 177 weight= 1000000.0 buffer_m= 0.0\n",
+      "    -> rasterized cells: 375, arr(min,max)=(1e+06,1e+06)\n",
+      "[W][613] features= 39 weight= 1000000.0 buffer_m= 0.0\n",
+      "    -> rasterized cells: 117, arr(min,max)=(1e+06,1e+06)\n",
+      "[W][622] features= 399 weight= 1000000.0 buffer_m= 0.0\n",
+      "    -> rasterized cells: 1191, arr(min,max)=(1e+06,1e+06)\n",
+      "[W][623] features= 7034 weight= 5.0 buffer_m= 0.0\n",
+      "    -> rasterized cells: 11477, arr(min,max)=(5,5)\n",
+      "[W][711] features= 482 weight= 1000000.0 buffer_m= 0.0\n",
+      "    -> rasterized cells: 2366, arr(min,max)=(1e+06,1e+06)\n",
+      "[W][712] features= 197 weight= 1000000.0 buffer_m= 0.0\n",
+      "    -> rasterized cells: 449, arr(min,max)=(1e+06,1e+06)\n",
+      "[W] total covered cells: 227938\n",
+      "[W] W stats: min=0.3 max=1 changed=35556/59311\n",
+      "unique l3_code: ['111', '112', '121', '131', '141', '153', '154', '155', '161', '162', '163', '212', '222', '231', '241', '251', '252', '311', '321', '331', '411', '421', '422', '423', '511', '612', '613', '622', '623', '711', '712']\n",
+      "weighted total cost: 7474.734677467846\n",
+      "[OK] saved: dem_textured_weighted_l3.html\n",
+      "Mime type rendering requires nbformat>=4.2.0 but it is not installed\n"
+     ]
+    }
+   ],
    "source": [
     "# 1) (이미 있음) DCT 근사 그리드 out\n",
     "# out = build_raster_from_dct(res, dx=90.0, dy=90.0)\n",
@@ -1282,7 +1367,7 @@
     "\n",
     "W, codes = build_weight_raster_from_single_shp(\n",
     "    res, out,\n",
-    "    shp_path=r\"C:\\Users\\inho9\\Desktop\\dev\\GISProject\\DATA\\Daejeon.shp\",\n",
+    "    shp_path=r\"C:\\Users\\inho9\\Desktop\\dev\\GISProject\\DATA\\Extracted_Deajeon.shp\",\n",
     "    code_col=\"l3_code\",\n",
     "    code_map=code_map,\n",
     "    default_weight=1.0,\n",
@@ -1303,14 +1388,26 @@
     "# 4) 3D 렌더(텍스처드 + 새 경로)\n",
     "out_w = out.copy()\n",
     "out_w[\"path_xy\"] = res_w[\"path_xy\"]\n",
-    "plotly_3d_dem_textured(\n",
-    "    res, out_w, sat_rgb,\n",
-    "    grid_max=700, path_lift_ratio=0.06,\n",
-    "    aspect_ratio=dict(x=1,y=1,z=0.22),\n",
-    "    camera_eye=dict(x=2.2,y=1.8,z=0.65),\n",
-    "    save_html=\"dem_textured_weighted_l3.html\"\n",
-    ")\n"
+    "\n",
+    "try :\n",
+    "    plotly_3d_dem_textured(\n",
+    "        res, out_w, sat_rgb,\n",
+    "        grid_max=700, path_lift_ratio=0.06,\n",
+    "        aspect_ratio=dict(x=1,y=1,z=0.22),\n",
+    "        camera_eye=dict(x=2.2,y=1.8,z=0.65),\n",
+    "        save_html=\"FinalResult.html\"\n",
+    "    )\n",
+    "except Exception as e:\n",
+    "    print(e)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "49be512c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
